--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
+    <title>WUPHF</title>
 
     <!-- Scripts -->
-    <script src="JS/index.js?"></script>
+    <script src="js/index.js?"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/index.css?">
@@ -10,6 +11,6 @@
 
   </head>
   <body>
-    
+    <input>Phone Number</input>
   </body>
 </html>
