--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <html>
   <head>
-<<<<<<< HEAD
     <title>WUPHF</title>
 
     <!-- Scripts -->
     <script src="js/index.js?"></script>
-=======
-
-    <!-- Scripts -->
-    <script src="JS/index.js?"></script>
->>>>>>> 5abf5d14f1c0585de9b95bb713219eeffbf3bf45
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/index.css?">
@@ -17,10 +11,12 @@
 
   </head>
   <body>
-<<<<<<< HEAD
-    <input>Phone Number</input>
-=======
-    
->>>>>>> 5abf5d14f1c0585de9b95bb713219eeffbf3bf45
+    <div id="larger_container">
+      <div id="login_container">
+        <input type="text" name="user" placeholder="username">
+        <input type="text" name="pass" placeholder="password">
+        <input type="submit" id="login_button" value="WUPHF ME DADDY">
+      </div>
+    </div>
   </body>
 </html>
