--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div id="login_container">
         <input type="text" name="user" placeholder="username">
         <input type="text" name="pass" placeholder="password">
+        <input type="text" name="pass" placeholder="phone number">
         <input type="submit" id="login_button" value="WUPHF ME DADDY">
       </div>
     </div>
