--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
           <input type="text" id="userInput" placeholder="username">
           <input type="text" id="passInput" placeholder="password">
           <input type="text" id="phoneInput" placeholder="phone number">
-          <input type="submit" id="login_button" value="WUPHF ME DADDY" onclick="addToUsers(document.getElementById('userInput').value,
+          <div type="submit" id="login_button" value="WUPHF ME DADDY" onclick="addToUsers(document.getElementById('userInput').value,
                                                                                             document.getElementById('passInput').value,
                                                                                             document.getElementById('phoneInput').value)">
+          WUPHF ME DADDY                                                                                  
+          </div>
       </div>
     </div>
   </body>
